# osr-rover-code

ROS/osr/src/: roboclaw_wrapper.py  rover.py
ROS/osr_bringup/: CMakeLists.txt
ROS/osr_bringup/config/: front_webcam_1280x720.yaml  front_webcam_640x480.yaml  nav2_params.yaml  raspicam.yaml  roboclaw_params.yaml  sick_lms_5xx.yaml
ROS/osr_bringup/launch/: nav2.launch.py  osr.launch  sensors.launch  sensors.launch.py  slam.launch
ROS/osr_bringup/maps/: 1816fell.pgm  1816fell.yaml
ROS/osr_control/: CMakeLists.txt  package.xml
ROS/osr_control/config/: controllers.yaml  hardware_interface.yaml
ROS/osr_control/include/osr_control/: control_loop.h
ROS/osr_control/launch/: ros_control.launch
ROS/osr_control/src/: control_loop.cpp  hardware_interface_node.cpp
ROS/osr_description/: CMakeLists.txt  package.xml  urdf.rviz
ROS/osr_description/config/: joint_names_osr_description.yaml
ROS/osr_description/launch/: display.launch  gazebo.launch
ROS/osr_description/meshes/: back_left_wheel.STL  back_right_wheel.STL  front_left_wheel.STL  front_right_wheel.STL  middle_left_wheel.STL  right_middle_wheel.STL
ROS/osr_description/urdf/: osr_description.csv  osr_description.urdf
ROS/person_following/: CMakeLists.txt  package.xml
ROS/person_following/launch/: follow_me.launch  track_me.launch
ROS/person_following/src/: follow_frame.py
